--- a/php/catalog/product/preview/index.phtml
+++ b/php/catalog/product/preview/index.phtml
@@ -23,10 +23,16 @@ $quantityStyle = "";
 $addToCartStyle = "";
 if(count($cartItems) > 0) {
   foreach($cartItems as $i) {
-    if($i['name'] == $productName) {
+	if($i['element_id'] == $product->id && !empty($i['offer'])){
+		$addToCartStyle = "display: none";
+		$quantityStyle = "display: none";
+	  break;
+	}else if($i['element_id'] == $product->id) {
       $addToCartStyle = "display: none";
+	  $quantityStyle = "display: block";
       $productAmount = $i['amount'];
       $productCartId = $i['id'];
+	  break;
     } else {
       $quantityStyle = "display: none";
     }
