--- a/php/emarket/purchasing_one_step/cart.phtml
+++ b/php/emarket/purchasing_one_step/cart.phtml
@@ -32,5 +32,6 @@ $cart['drawFormButton'] = true;
 <style>
 	.cart__list__item{
 		padding-top: 4px;
+		border-bottom: 1px solid #E2E6F0;
 	}
 </style>
