--- a/php/layout/menu/index.phtml
+++ b/php/layout/menu/index.phtml
@@ -62,8 +62,8 @@
   </ul>
 </nav>
 <div class="sidebar__bottom">
-  <a class="sidebar__bottom-shop" href="/shop/">Перейти в Интернет-Магазин</a>
-  <div class="sidebar__bottom-logo"><a href="/shop/">
+  <a class="sidebar__bottom-shop" href="https://novopool.ru">Перейти в Интернет-Магазин</a>
+  <div class="sidebar__bottom-logo"><a href="https://novopool.ru">
       <div><img src="dist/assets/images/logo1.png" alt=""></div>
     </a></div>
 </div>
