--- a/php/emarket/cart/product/price.phtml
+++ b/php/emarket/cart/product/price.phtml
@@ -8,26 +8,9 @@
 
 $product = $variables;
 ?>
-
-<div class="col-md-3 col-sm-12 col-xs-12 order_price">
-	<h5 class="gray_text hidden-md hidden-lg">
-		<?= $this->getCommonVar('priceHeader') ?>
-	</h5>
-
-	<span class="price">
-		<?= $this->getOriginalPrice($product) ?>
-	</span>
-
-	<img src="img/char.png" alt="some image" class="char_x">
-
-	<span class="quantity">
-		<?= $this->getAmount($product) ?>
-
-		<?php if ($this->isCartPage()): ?>
-			<span class="change_product_quantity" data-id="<?= $product['id'] ?>">
-				<a class="increment_product_quantity">+</a>
-				<a class="decrement_product_quantity">−</a>
-			</span>
-		<?php endif; ?>
-	</span>
+<div class="order_sum sum_rub">
+    <span><?= $product['price']['prefix']
+        .number_format(
+            ceil( $product['price']['actual']), 0, '.', ' ')
+    .$product['price']['suffix']?> </span>
 </div>
