--- a/php/content/home/index.phtml
+++ b/php/content/home/index.phtml
@@ -129,7 +129,7 @@ $main_blog = $this->vsk_objByType($settings->getValue('main_blog'));
       </a>
       <a class="services__item toogles__item-title" href="/uslugi/" data-toogles="2">
         <div>
-          <a class="services__img services__img--two">
+          <span class="services__img services__img--two">
             <div>
             <svg width="513" height="513" viewBox="0 0 513 513" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 51.3%;">
             <g clip-path="url(#clip0)">
@@ -144,7 +144,7 @@ $main_blog = $this->vsk_objByType($settings->getValue('main_blog'));
             </defs>
             </svg>
             </div>
-          </a>
+          </span>
 
           <div class="services__info"><span class="services__title">
               <h5>Сервис</h5></span>
