--- a/php/content/pools/page.phtml
+++ b/php/content/pools/page.phtml
@@ -53,11 +53,11 @@ $product__tabs['delivery'] = 'Доставка и оплата';
 
 
 
-  <!-- <div class="product__top">
+ <div class="product__top">
     <div class="center-wrap">
-      <div class="product__title"><!?= $this->escape($variables['header']) ?></div>
+      <div class="product__title"><?= $this->escape($variables['header']) ?></div>
       <div class="product__inner">
-        <!?= $this->render($variables, 'layout/header/breadcrumbs') ?>
+        <?= $this->render($variables, 'layout/header/breadcrumbs') ?>
         <div class="product__inner-right mobile--hide">
           <div class="product__inner-postpone comparisons comparisons--bg comparisons--heart">
             <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -69,11 +69,11 @@ $product__tabs['delivery'] = 'Доставка и оплата';
     </div>
   </div>
   
-  <!?php if($fabrikaId==63238||$fabrikaId==76607): ?>
-    <!?= $this->render($variables, 'content/pools/page/pavilion') ?>
-  <!?php else: ?>
-    <!?= $this->render($variables, 'content/pools/page/poolModel') ?>
-  <!?php endif; ?>
+  <?php if($fabrikaId==63238||$fabrikaId==76607): ?>
+    <?= $this->render($variables, 'content/pools/page/pavilion') ?>
+  <?php else: ?>
+    <?= $this->render($variables, 'content/pools/page/poolModel') ?>
+  <?php endif; ?>
 
   <div class="product__info-wrap">
     <div class="center-wrap">
@@ -83,54 +83,54 @@ $product__tabs['delivery'] = 'Доставка и оплата';
   <div style="width:100%">
     <div class="product__tabs toogles__wrap">
       <div class="product__tabs-row mobile--hide">
-        <!?php $i=1; foreach($product__tabs as $key => $tab): ?>
-          <div class="product__tabs-item toogles__item-title <!?=($i == 1)?'toogles__item-title--active':''?>" data-toogles="<!?=$i++?>"><!?=$tab?></div>
-        <!?php endforeach; ?>
+        <?php $i=1; foreach($product__tabs as $key => $tab): ?>
+          <div class="product__tabs-item toogles__item-title <?=($i == 1)?'toogles__item-title--active':''?>" data-toogles="<?=$i++?>"><?=$tab?></div>
+        <?php endforeach; ?>
       </div>
       <div class="product__tabs-slider desktop--hide">
         <div class="swiper-container">
           <div class="swiper-wrapper">
-            <!?php $i=1; foreach($product__tabs as $key => $tab): ?>
+            <?php $i=1; foreach($product__tabs as $key => $tab): ?>
 
               <div class="swiper-slide">
-                <div class="product__tabs-item toogles__item-title <!?=($i == 1)?'toogles__item-title--active':''?>" data-toogles="<!?=$i++?>"><!?=$tab?></div>
+                <div class="product__tabs-item toogles__item-title <?=($i == 1)?'toogles__item-title--active':''?>" data-toogles="<?=$i++?>"><?=$tab?></div>
               </div>
-            <!?php endforeach; ?>
+            <?php endforeach; ?>
             
           </div>
         </div>
       </div>
-      <!?php $i=1; foreach($product__tabs as $key => $tab): ?>
-      <div class="toogles__item <!?=($i == 1)?'toogles__item--active':''?>" data-toogles="<!?=$i++?>">
-        <div class="toogles__item-content" style="<!?=($i == 2)?'display: block;':''?>">
+      <?php $i=1; foreach($product__tabs as $key => $tab): ?>
+      <div class="toogles__item <?=($i == 1)?'toogles__item--active':''?>" data-toogles="<?=$i++?>">
+        <div class="toogles__item-content" style="<?=($i == 2)?'display: block;':''?>">
           <div>
             <div class="product__tabs-tab" style="margin:0;max-width:100%">
 
-            <!?= $this->render($variables, 'blocks/tabs/'.$key) ?>
+            <?= $this->render($variables, 'blocks/tabs/'.$key) ?>
 
             </div> 
           </div>
         </div>
       </div>
-      <!?php endforeach; ?>
+      <?php endforeach; ?>
     </div>
   </div>
 
-  <!?php if($fabrikaId==53032){ ?>
+  <?php if($fabrikaId==53032){ ?>
     <div class="product__column" style="position: sticky;top: 86px;display: table;">  
       <div class="product__price">
         <div class="price"> 
           <a style="font-size: 1.6rem;" data-fancybox data-src="#linerDesc" href="javascript:;"><u>LINER</u>
-          <p><!?=$price?></p></a>
-          <!?php if($price2){ ?>
+          <p><?=$price?></p></a>
+          <?php if($price2){ ?>
             <a style="font-size: 1.6rem;" data-fancybox data-src="#cristalDesc" href="javascript:;"><u>CRISTAL</u>
-            <p><!?=$price2?></p></a>
-          <!?php } ?>
+            <p><?=$price2?></p></a>
+          <?php } ?>
         </div>
       </div>
       <div class="product__row">
         <div class="product__row-basket1">
-          <div class="basket basket--blue" onclick="$('#callback input[name=&quot;system_form_id&quot;]').val(236);$('#callback .popup-form__title').text('Консультация по бассейну <!?=$page->name?>');show_popup('callback')">
+          <div class="basket basket--blue" onclick="$('#callback input[name=&quot;system_form_id&quot;]').val(236);$('#callback .popup-form__title').text('Консультация по бассейну <?=$page->name?>');show_popup('callback')">
             <span>Заказать консультацию</span>
           </div>
         </div>
@@ -143,16 +143,16 @@ $product__tabs['delivery'] = 'Доставка и оплата';
         </div>
       </div>
 
-      <!?= $this->render($variables, 'blocks/product/props') ?>
+      <?= $this->render($variables, 'blocks/product/props') ?>
   </div>
-  <!?php } ?>
+  <?php } ?>
 </div>  
 
 
 
 
     </div>
-  </div>  -->
+  </div> 
 </section>    
 
 
