--- a/src/assets/css/blocks/basket.scss
+++ b/src/assets/css/blocks/basket.scss
@@ -151,7 +151,8 @@
     }
     .order_item .order_sum span {
       font-family: 'Montserrat',sans-serif;
-      font-size: 20px;
+      font-size: 16px;
+      font-weight: 600;
     }
   
   }
