--- a/src/assets/css/blocks/sections/information.scss
+++ b/src/assets/css/blocks/sections/information.scss
@@ -3,7 +3,7 @@
 
 
     @media screen and (max-width:$large_tablet) {
-        padding: 4rem 0 8rem;
+        padding: 38px 0 8rem;
     }
 
     &__list {
