--- a/src/assets/css/blocks/sections/product.scss
+++ b/src/assets/css/blocks/sections/product.scss
@@ -653,3 +653,237 @@
     }
 
 }
+
+.product__aquabioraphy {
+    width: 100%; 
+    height: 354px; 
+    margin-bottom: 60px;
+    position: relative;
+}
+
+.product__aquabioraphy-titles {
+    position: absolute;
+    color: white;
+    top: 49%;
+    left: 12%;
+}
+
+.product__aquabioraphy-title {
+    font-size: 32px;
+    font-weight: lighter;
+    margin-bottom: 10px;
+}
+
+.product__aquabioraphy-serie {
+    font-size: 40px;
+}
+
+.product__main {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 60px;
+}
+
+.product__info2 {
+    width: 66%;
+}
+
+.product__info2-model {
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+    margin-bottom: 20px;
+    h4 {
+        margin-bottom: 15px;
+    }
+    h2 {
+        a {
+            font-size: 29px;
+            border-bottom: 2px dashed;
+            text-decoration: none;
+        }
+    }
+}
+
+.product__info2-scheme {
+    position: relative;
+    height: 117px;
+    width: 294px;
+    text-align: right;
+    &:before {
+        position: absolute;
+        top: -15px;
+        width: 254px;
+        height: 1px;
+        background-color: #cdcdcd;
+        content: '';
+    }
+    &:after {
+        position: absolute;
+        left: 15px;
+        width: 1px;
+        height: 83px;
+        background-color: #cdcdcd;
+        content: '';
+    }
+}
+
+.product__info2-length, .product__info2-width, .product__info2-depth {
+    display: block;
+    position: absolute;
+    background-color: white;
+}
+
+.product__info2-length {
+    top: -22px;
+    font-size: 12px;
+    left: 150px;
+    width: 40px;
+    text-align: center;
+}
+
+.product__info2-width {
+    top: 27px;
+    width: 40px;
+    left: -3px;
+    text-align: center;
+    font-size: 12px;
+    z-index: 2;
+    height: 26px;
+    padding: 5px 0;
+}
+
+.product__info2-depth {
+    font-size: 12px;
+    top: 28%;
+    left: 45%;
+    font-weight: 300;
+    span {
+        font-weight: 500;
+    }
+}
+
+.product__info2-description {
+    font-size: 16px;
+    text-align: justify;
+    line-height: 1.5;
+}
+
+.product__purchase {
+    width: 178px;
+}
+
+.product__purchase-prices {
+    h4 {
+        font-weight: 400;
+    }
+    h3 {
+        font-size: 24px;
+        font-weight: 500;
+        margin-bottom: 20px;
+    }
+}
+
+.product__purchase-links {
+    .btn {
+        padding: 6px 12px;
+        width: 100%;
+    }
+    button {
+        margin-bottom: 20px;
+        &:nth-child(2) {
+            width: 100%;
+            font-size: 14px;
+            background-color: #ffffff;
+            border: 1px solid #4081ff;
+            color: #4081ff;
+            border-radius: 5px;
+            padding: 12px;
+        }
+    }
+    a {
+        display: block;
+        font-size: 13px;
+        margin-bottom: 20px;
+        text-decoration: underline;
+        color: #4081FF;
+    }
+    .product__purchase-discount {
+        font-size: 12px;
+        text-align: center;
+        max-width: 18rem;
+        width: 100%;
+        background-color: #FFD600;
+        padding: 5px 0;
+        font-weight: 600;
+    }
+}
+
+.product__dropdowns {
+    margin-bottom: 60px;
+}
+
+.product__dropdown {
+    background-color: #FAFAFA;
+    height: 154px;
+    padding: 0 13%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid rgba(207, 207, 207, 0.6);
+    &:last-child {
+        border-bottom: none;
+    }
+}
+
+.product__dropdown-title {
+    font-size: 28px;
+    font-weight: 600;
+}
+
+.product__series-headline {
+    font-size: 32px;
+    margin-bottom: 40px;
+}
+
+.product__series-previews {
+    display: flex;
+}
+
+.product__series-preview {
+    margin-right: 36px;
+    height: 320px;
+    text-align: center;
+    img {
+        object-fit: cover;
+        border-radius: 5px;
+        margin-bottom: 15px;
+    }
+    &:last-child {
+        margin-right: 0;
+    }
+}
+
+.product__dropdown-icon {
+    width: 8%;
+}
+
+.product__info2 .product__dropdowns {
+    position: absolute;
+    width: 100%;
+    top: -44px;
+    z-index: 3;
+    margin-bottom: 0;
+    display: none;
+    .product__dropdown {
+        background-color: white;
+        padding: 0;
+        h4 {
+            margin-bottom: 15px;
+        }
+    }
+    &.opened {
+        display: block;
+    }
+}
