--- a/src/assets/css/blocks/sections/services.scss
+++ b/src/assets/css/blocks/sections/services.scss
@@ -2,7 +2,7 @@
     padding: 10rem 0 3rem;
 
     @media screen and (max-width:$large_tablet) {
-        padding: 5rem 0 1rem;
+        padding: 0;
     }
     &__tab {
         display: flex;
@@ -208,8 +208,7 @@
         padding-top: 2rem;
         @media screen and (max-width:$small_tablet) {
             width: 150px;
-            margin-left: 20px;
-            padding: 0;
+            padding: 0 20px;
         }
     }
 
