--- a/src/assets/css/blocks/basket.scss
+++ b/src/assets/css/blocks/basket.scss
@@ -124,7 +124,7 @@
   
     &__hide-list-trigger {
       text-decoration: none;
-      color: #33b5cb;
+      color: #4081FF;
       font-weight: 300;
       line-height: normal;
       font-size: 12px;
@@ -136,7 +136,7 @@
     &__show-list-trigger {
       display: none;
       text-decoration: none;
-      color: #33b5cb;
+      color: #4081FF;
       font-weight: 300;
       line-height: normal;
       font-size: 12px;
