--- a/umishop_src/less/default.less
+++ b/umishop_src/less/default.less
@@ -795,7 +795,7 @@ div.personal_data_wrapper {
 			display: inline;
 
 			a[href] {
-				color: #33b5cb;
+				color: #4081FF;
 				font-size: 14px;
 			}
 		}
@@ -848,7 +848,7 @@ div.personal_data_wrapper {
 			display: inline;
 
 			a[href] {
-				color: #33b5cb;
+				color: #4081FF;
 				font-size: 14px;
 			}
 		}
@@ -966,12 +966,12 @@ main {
 		padding: 16px;
 		width: 250px;
 		display: block;
-		color: #33b5cb;
+		color: #4081FF;
 		transition: all 0.2s;
 		margin-top: 30px;
 		&:hover {
 			color: #ffffff;
-			background: #33b5cb;
+			background: #4081FF;
 		}
 	}
 }
@@ -1068,17 +1068,17 @@ main {
 				}
 			}
 			@media (max-width: 991px) {
-				border: 2px solid #33b5cb;
+				border: 2px solid #4081FF;
 				background: transparent;
 				display: block;
 				margin: 0 auto;
 				width: 290px;
 				padding: 13px;
-				color: #33b5cb;
+				color: #4081FF;
 				transition: all 0.2s;
 				&:hover {
 					color: #ffffff;
-					background: #33b5cb;
+					background: #4081FF;
 				}
 			}
 		}
@@ -1216,7 +1216,7 @@ form#login_form {
 				}
 				.transparent_btn:hover {
 					color: #ffffff;
-					background: #33b5cb;
+					background: #4081FF;
 				}
 			}
 		}
@@ -1240,7 +1240,7 @@ form#login_form {
 				}
 				.transparent_btn:hover {
 					color: #ffffff;
-					background: #33b5cb;
+					background: #4081FF;
 				}
 			}
 		}
