--- a/umishop_src/less/style.less
+++ b/umishop_src/less/style.less
@@ -159,7 +159,7 @@ main {
 					.comment_count .lazy_comment_count {
 						font-size: 16px;
 						font-weight: 700;
-						color: #33b5cb;
+						color: #4081FF;
 					}
 					.additional-info {
 						order: 2;
@@ -322,7 +322,7 @@ main {
 							transition: color .2s;
 							&:hover {
 								color: #fff;
-								background: #33b5cb;
+								background: #4081FF;
 								text-decoration: none;
 							}
 						}
@@ -485,10 +485,10 @@ main {
 							display: none;
 						}
 						.buy_one_click_button {
-							border-color: #33b5cb;
+							border-color: #4081FF;
 							padding: 9px;
 							display: inline-block;
-							color: #33b5cb;
+							color: #4081FF;
 							text-align: center;
 							font-size: 14px;
 							transition: color .2s;
@@ -497,7 +497,7 @@ main {
 							margin: auto;
 							&:hover {
 								color: #fff;
-								background: #33b5cb;
+								background: #4081FF;
 								text-decoration: none;
 							}
 						}
@@ -956,7 +956,7 @@ main {
 					background: @color-base;
 					& > a {
 						color: @white;
-						background: #33b5cb;
+						background: #4081FF;
 						&:focus, &:hover {
 							color: @white;
 						}
@@ -1091,7 +1091,7 @@ footer {
 					a {
 						color: #929292;
 						&:hover {
-							color: #33b5cb;
+							color: #4081FF;
 						}
 					}
 				}
