--- a/umishop_src/less/variables.less
+++ b/umishop_src/less/variables.less
@@ -6,7 +6,7 @@
 @gray: #f3f3f3;
 @mediumGray: #454545;
 @darkGray: #656565;
-@color-base: #33b5cb;
+@color-base: #4081FF;
 @backgroundGray: #f8f8f8;
 @modalBackground: #f6f6f6;
 @bord_color: #ebebeb;
