--- a/php/catalog/product/preview/index.phtml
+++ b/php/catalog/product/preview/index.phtml
@@ -15,8 +15,10 @@ if(is_array($variables)) $product = $variables['product']; else $product = $vari
 if(is_array($variables)) $compareList = $variables['compareList'];
 if(is_array($variables)) $cartItems = $variables['cartItems'];
 if(is_array($variables)) $classes = $variables['classes'];
+if(is_array($variables)) $context = $variables['context'];
 
-$productName = $product->getName();
+$productName = $this->escape($product->getName());
+//if(!empty($context)) $context= '<br><i>'.$context.'</i>';
 $productAmount;
 $productCartId;
 $quantityStyle = "";
@@ -57,7 +59,7 @@ $ids = json_decode($this->getCookie('favorites'));
 
 ?>
 
-<div class="card <?= $this->getNewLabelClass($product) ?> <?=$classes?>" data-order_id="<?=$productCartId?>" data-element_id="<?= $product->getId() ?>" umi:region="row" umi:element-id="<?= $product->getId() ?>">
+<div class="card card_<?= $product->getId() ?> <?= $this->getNewLabelClass($product) ?> <?=$classes?>" data-order_id="<?=$productCartId?>" data-element_id="<?= $product->getId() ?>" umi:region="row" umi:element-id="<?= $product->getId() ?>">
 
 	<?php if($sale){ ?><p class="card__filter">скидка</p><?php } ?>
 	<?php if($delivery_free){ ?><p class="card__filter card__filter--bg">доставка бесплатная</p><?php } ?>
@@ -69,7 +71,7 @@ $ids = json_decode($this->getCookie('favorites'));
  
 	<p class="card__price"><?=$price?><?php if($old_price){?><span class="card__price-old"><?=$old_price?></span><?php } ?></p>
 
-	<a class="card__title" umi:element-id="<?=$product->getId()?>" href="<?= $this->getPath($product) ?>" umi:field-name="name" umi:delete="delete"><?= $this->escape($product->getName()) ?></a>
+	<a class="card__title" umi:element-id="<?=$product->getId()?>" href="<?= $this->getPath($product) ?>" umi:field-name="name" umi:delete="delete"><?= $productName ?></a>
 
 	<div class="card__bottom">
 		<div class="basket-wrap">
@@ -105,4 +107,17 @@ $ids = json_decode($this->getCookie('favorites'));
 		</div>
 	</div>
 	<p class="card__article">Артикул:<span><?=$product->getValue('articul')?></span></p>
+	<div class="context" style="display:none">
+		<?=$context?>
+	</div>
 </div> 
+
+<?php if(!empty($context)): ?>
+	<script>
+		$('.card_<?=$product->getId()?>').hover(function(){
+			$(this).find('.context').show();
+		}, function(){
+	    	$(this).find('.context').hide();
+	  	});
+	</script>
+<?php endif; ?>
