--- a/php/search/result.phtml
+++ b/php/search/result.phtml
@@ -8,30 +8,67 @@
  */
 
 $pageList = $variables['lines'];
+
+$compareList = $this->getComparisonProducts();
+$cart = $this->macros('emarket', 'cart');
+
+$ids = [];
+$context = [];
+foreach($pageList as $pr){
+	$ids[] = $pr['id'];
+	$context[$pr['id']] = $pr['context'];
+}
+
+$productList = $this->vsk_pageByType($ids);
+$ids = [];
 ?>
 
-<div class="search_results">
-	<div class="container">
-		<div class="grey_border">
-			<?php foreach ($pageList as $page): ?>
-				<div class="search_box">
-					<div><?= $page['number'] ?></div>
-
-					<div>
-						<a href="<?= $page['link'] ?>"
-						   umi:element-id="<?= $page['id'] ?>"
-						   umi:field-name="name"
-						   umi:empty="<?= $this->translate('empty_page_name') ?>"
-						>
-							<?= $this->escape($page['name']) ?>
-						</a>
-
-						<p><?= $page['context'] ?></p>
-					</div>
-				</div>
-			<?php endforeach; ?>
-		</div>
-
-		<?= $this->render($variables, 'library/pagination') ?>
-	</div>
+<div class="pool-filters__wrap goods" id="catalog_category">
+	<?php foreach ($productList as $product): $ids[] = $product->id; ?>
+		<?= $this->render(['product'=>$product,'compareList'=>$compareList,'cartItems'=>$cart['items'],'context'=>$context[$product->id]], 'catalog/product/preview/index') ?>
+	<?php endforeach; ?>
+	<div class="card" style="opacity:0;padding: 0;margin: 0;"></div>
+	<div class="card" style="opacity:0;padding: 0;margin: 0;"></div>
+	<div class="card" style="opacity:0;padding: 0;margin: 0;"></div>
+	<div class="card" style="opacity:0;padding: 0;margin: 0;"></div>
 </div>
+
+<?php /* if(count($ids)!=count($pageList)): ?>
+	<div class="center-wrap" style="padding-top: 6rem;">
+		<div class="pool-filters__title">Статьи по вашему запросу</div>
+	</div>
+	<div class="center-wrap" style="padding-top: 2.1rem;">
+		<div class="news">
+			<div class="news_page">
+				<?php foreach ($pageList as $page): if(in_array($page['id'],$ids)) continue; ?>
+					<div class="blog-main__section">
+						<a href="<?=$page['link'] ?>" target="_blank">
+						<h3 class="blog-main__title"><?= $this->escape($page['name']) ?></h3></a>
+						<div class="blog-main__paragraph"><?= $page['context'] ?></div>
+					</div>
+				<?php endforeach; ?>
+			</div>
+		</div> 
+
+	</div>
+
+<?php endif; */ ?>
+
+<style>
+	.context{
+		position: absolute;
+		background: #fff;
+		padding: 15px;
+		z-index: 3;
+		width: 100%;
+		left: 0;
+		font-size: 12px;
+		box-shadow: 0px 0px 30px rgb(32 35 40 / 15%);
+		border-radius: 5px;
+		top: 0;
+    max-height: 191px;
+    overflow: auto;
+	}
+</style>
+
+<?= $this->render($variables, 'blocks/pagination') ?>
