--- a/umishop_src/less/main_window.less
+++ b/umishop_src/less/main_window.less
@@ -1044,7 +1044,7 @@ main {
 					label {
 						box-shadow: 0 0 8px 2px rgba(196,196,196,.15);
 						&.checked {
-							border: 2px solid #33b5cb;
+							border: 2px solid #4081FF;
 						}
 						img {
 							max-height: 50px;
