--- a/src/assets/css/blocks/series.scss
+++ b/src/assets/css/blocks/series.scss
@@ -62,6 +62,9 @@
 }
 .series__modelImage {
     padding: 1rem 1rem;
+    &-mobile{
+        max-width: 86.5%;
+    }
 }
 .series__modelPrice {
     color: #353535;
@@ -79,7 +82,7 @@
 }
 .series__model .product__specifications {
     margin-top:1.5rem;
-    padding: 0 2rem;
+    padding: 0 1rem!important;
 }
 .series__model:hover {
     background: #f7f7f7;
@@ -96,10 +99,9 @@
             margin-top: 10px;
         }
         div {
-            width: 50%;
+            width: 100%;
             &:nth-child(2) {
                 font-size: 14px;
-                padding-left: 20px;
                 p {
                     margin-top: 10px;
                     font-size: 14px;
@@ -109,13 +111,19 @@
                     }
                 }
                 h4 {
-                    margin-top: 32px;
+                    margin: 15px 0 5px 0;
                     font-weight: bold;
                 }
             }
         }
     }
 }
+
+.series__model .product__purchase-discount {
+    width: 180px;
+    margin-left: 10px;
+}
+
 @media screen and (max-width:768px){
     .series__model {
         width:100%;
