--- a/src/assets/css/blocks/sections/product.scss
+++ b/src/assets/css/blocks/sections/product.scss
@@ -49,6 +49,7 @@
             line-height: 142.3%;
             color: #484848;
             margin-bottom: 2rem;
+            width: 100%;
         }
     }
 
@@ -126,6 +127,7 @@
             color: #676767;
             margin-bottom: 0.7rem;
             font-weight: 400;
+            width: 100%;
             &Name {
                 width: 85px;
             }
