--- a/php/catalog/product/main/price/trade_offers.phtml
+++ b/php/catalog/product/main/price/trade_offers.phtml
@@ -20,7 +20,7 @@
 
 <div class="product__power additional_options">
 	<?php foreach ($characteristicSet as $title => $valueList): ?>
-		<div class="additional_options-item <?= $this->getCharacteristicBlockClass($title) ?>" <?=(count($valueList)<2 || $title=='Цена' || $title=='Price')?'style="display:none"':''?>>
+		<div class="additional_options-item <?= $this->getCharacteristicBlockClass($title) ?>" <?=(count($valueList)<2 || $title=='Цена' || $title=='Изображение' || $title=='Price')?'style="display:none"':''?>>
 			<div class="product__column-title additional_options-text" data-title="<?= $this->escape($title) ?>"><?= $this->escape($title) ?></div>
 			<div class="product__power-list additional_options-list" data-title="<?= $this->escape($title) ?>">
 				<?php /* foreach ($valueList as $value => $offerIdList): ?>
