--- a/src/assets/css/blocks/sections/product.scss
+++ b/src/assets/css/blocks/sections/product.scss
@@ -32,6 +32,10 @@
         padding-top: 1rem;
         margin-right: 3.5rem;
 
+        &.anchors {
+            padding-left: 15px;
+        }
+
         @media screen and (max-width:$large_tablet) {
             padding-top: 0;
             margin-bottom: 3.5rem;
@@ -592,6 +596,7 @@
 
 .ui-selectmenu-button.ui-button {
     width: 100%;
+    padding: 0;
 }
 
 .ui-widget.ui-widget-content {
