--- a/php/catalog/index.phtml
+++ b/php/catalog/index.phtml
@@ -54,7 +54,7 @@
 
 <?=$this->render($variables, 'catalog/blocks/best') ?> 
 
-
+<!-- 
         <section class="collection collection--build">
           <div class="center-wrap">
             <div class="simple-title collection__title">Коллекции</div>
@@ -124,4 +124,4 @@
               </div>
             </div>
           </div>
-        </section>
+        </section> -->
